--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,17 +7,30 @@
 #enabling the H2 console
 #spring.h2.console.enabled=true
 
+#################### H2 Config ########################################################
+#spring.datasource.url=jdbc:h2:mem:testdb
+#spring.datasource.driverClassName=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=1
 
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+#spring.jpa.hibernate.ddl-auto= update
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto= update
-
-spring.h2.console.enabled=true
+#spring.h2.console.enabled=true
 # default path: h2-console
-spring.h2.console.path=/h2-ui
+#spring.h2.console.path=/h2-ui
+
+###################### POSTGRE CONFIG #######################################################
+
+
+
+spring.datasource.url=jdbc:postgresql://ip:5432/test_m
+spring.datasource.username=user
+spring.datasource.password=password
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
+
+
+jwt.secret=secret-key
